# tornado-solana-privacy

./: .gitignore  Anchor.toml  CONSULTANT_REVIEW_GUIDE.md  CONSULTANT_REVIEW_PACKAGE.md  CONSULTANT_SUCCESS_BRIEF.md  CRITICAL_ISSUES_FIXED.md  CTO_POSEIDON_VERIFICATION.md  DATA_FLOW_DOCUMENTATION.md  DEVELOPMENT_PROGRESS.md  ELEGANT_NULLIFIER_SOLUTION.md  GROTH16_INTEGRATION.md  GROTH16_INTEGRATION_GUIDE.md  IMPLEMENTATION_CREDITS.md  INSTALLATION_GUIDE_2025.md  LOCAL_TEST_PLAN.md  POSEIDON_TEST_RESULTS.md  POSEIDON_VERIFICATION_SUCCESS.md  PRODUCTION_DEPLOYMENT.md  QUICK_TEST_SCRIPT.md  README.md  SCALING_SOLUTION.md  SECURITY_FIX_RELAYER_PAYMENT.md  SECURITY_FIX_VERIFYING_KEY.md  SESSION_5_HANDOFF.md  SESSION_6_HANDOFF.md  VAULT_PDA_IMPLEMENTATION_PLAN.md  VERIFICATION_FOR_CONSULTANT.md  VERIFYING_KEY_SETUP.md  package-lock.json  package.json  run_critical_test.bat  run_critical_test.sh  run_final_verification.sh  standalone_poseidon_test.rs  test_compilation.md  test_minimal.sh  test_poseidon_only.sh
.cargo/: config.toml
circuits/: ELEGANCE_REPORT.md  README.md  SOLANA_ADDRESS_CONVERSION.md  package-lock.json  package.json  withdraw.circom  (+2 more)
programs/tornado_solana/: Cargo.toml
programs/tornado_solana/src/: final_verification_test.rs  integration_tests.rs  lib.rs  lib_fixed.rs  merkle_tree.rs  merkle_tree_poseidon.rs  nullifier_pda_test.rs  pda_nullifier.rs  poseidon_hash.rs  poseidon_test.rs  real_proof_test.rs  relayer_security_test.rs  simple_test.rs  stored_vk_integration_test.rs  tests.rs  vault_pda_tests.rs  verifying_key.rs  verifying_key_security_test.rs
(+12 files in other folders)
