[package]
name = "tornado-solana"
version = "0.1.0"
description = "Privacy-preserving transaction mixer for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tornado_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.18.17"
# Light Protocol Poseidon for ZK-friendly hashing
light-poseidon = "0.2.0"
# Required for BN254 field elements
ark-bn254 = "0.4.0"